--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -37,14 +37,17 @@ span {
 }
 
 .istoria {
+	font-family: ShantellSans;
 	color: rgb(47, 0, 128);
 }
 
 .istoria-continuation {
 	color: rgb(226, 208, 43);
-	font-family: MADE-TheArtist-Script-PERSONAL-USE;
-	font-size: 60px;
-	font-style: inherit;
+	font-family: ShantellSans;
+	font-style: italic;
+	font-weight: 700;
+	font-size: 35px;
+
 }
 
 .opyus {
@@ -61,7 +64,7 @@ span {
 .training {
 	color: rgb(52, 22, 223);
 	text-transform: capitalize;
-	font-family: 'Times New Roman', Times, serif;
+	font-family: Poppins;
 	font-style: italic;
 	letter-spacing: 10px;
 }
@@ -80,6 +83,8 @@ span {
 #teaching,
 #care,
 #common-diseases {
+	font-family: ShantellSans;
+	font-weight: bold;
 	font-size: 50px;
 	text-decoration: underline;
 	color: rgb(244, 13, 13);
@@ -100,7 +105,6 @@ span {
 	color: #7D7D7D;
 	font-family: Inter;
 	font-size: 18px;
-	font-weight: 400;
 	line-height: 1.46
 }
 
@@ -124,7 +128,6 @@ span {
 	color: #7D7D7D;
 	font-size: 18px;
 	font-family: Inter;
-	font-weight: 400;
 	line-height: 1.46;
 }
 
